--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -72,5 +73,9 @@ fonts:
           - asset: fonts/DMSans-Medium.ttf
           - asset: fonts/DMSans-MediumItalic.ttf
           - asset: fonts/DMSans-Regular.ttf
+ 
+      - family: CustomIcons
+        fonts:
+          - asset: fonts/CustomIcons.ttf        
     # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
