--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -52,30 +51,36 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-fonts:
-  - family: Schyler
-    fonts:
-      - asset: fonts/Schyler-Regular.ttf
-      - asset: fonts/Schyler-Italic.ttf
-        style: italic
+  fonts:
+    - family: Schyler
+      fonts:
+        - asset: fonts/Schyler-Regular.ttf
+        - asset: fonts/Schyler-Italic.ttf
+          style: italic
 
-      - family: Trajan Pro
-        fonts:
-          - asset: fonts/TrajanPro.ttf
-          - asset: fonts/TrajanPro_Bold.ttf
-            weight: 700
+    - family: Trajan Pro
+      fonts:
+        - asset: fonts/TrajanPro.ttf
+        - asset: fonts/TrajanPro_Bold.ttf
+          weight: 700
 
-      - family: DMSans
-        fonts:
-          - asset: fonts/DMSans-Bold.ttf
-          - asset: fonts/DMSans-BoldItalic.ttf
-          - asset: fonts/DMSans-Italic.ttf
-          - asset: fonts/DMSans-Medium.ttf
-          - asset: fonts/DMSans-MediumItalic.ttf
-          - asset: fonts/DMSans-Regular.ttf
- 
-      - family: CustomIcons
-        fonts:
-          - asset: fonts/CustomIcons.ttf        
-    # For details regarding fonts from package dependencies,
+    - family: DMSans
+      fonts:
+        - asset: fonts/DMSans-Bold.ttf
+        - asset: fonts/DMSans-BoldItalic.ttf
+        - asset: fonts/DMSans-Italic.ttf
+        - asset: fonts/DMSans-Medium.ttf
+        - asset: fonts/DMSans-MediumItalic.ttf
+        - asset: fonts/DMSans-Regular.ttf
+
+    - family: CustomIcons
+      fonts:
+        - asset: fonts/CustomIcons.ttf
+    - family: FGTIcons
+      fonts:
+        - asset: fonts/FGTIcons.ttf
+    - family: IconsFGT
+      fonts:
+        - asset: fonts/IconsFGT.ttf
+      # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
