--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  carousel_pro: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +53,6 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    
     - family: DMSans
       fonts:
         - asset: fonts/DMSans-Bold.ttf
