--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   carousel_pro: ^1.0.0
-  cloud_firestore:
+  cloud_firestore: any
   firebase: ^7.1.0
+  firebase_auth: any
 
 dev_dependencies:
   flutter_test:
