--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   carousel_pro: ^1.0.0
   cloud_firestore: any
   firebase_auth: any
-
+  # google_maps_flutter: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
