--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,9 @@ dependencies:
   carousel_pro: ^1.0.0
   cloud_firestore: any
   firebase_auth: any
-  google_maps_flutter: any
+  google_maps_flutter:
+
+  # google_maps: ^3.4.1
 
 dev_dependencies:
   flutter_test:
