--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   cloud_firestore: any
   firebase_auth: any
   google_maps_flutter:
+  # particles_flutter: ^0.1.2
+  loading: ^1.0.2
 
   # google_maps: ^3.4.1
 
